# team-re-boot

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/minutes/: 2023-06-03.md
